--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
     <uses-feature android:name="android.hardware.camera.autofocus"/>
     <uses-feature android:name="android.hardware.camera.front"/>
     <uses-feature android:name="android.hardware.camera.front.autofocus"/>
-    <application
 
+    <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-         android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="MyApp"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OpenCV"
         tools:targetApi="31">
@@ -45,6 +47,15 @@
         </activity>
         <activity
             android:name=".MainActivity_Seconds"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""
+                />
+        </activity>
+
+        <activity
+            android:name=".init"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
