--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 
 dependencies {
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
